--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
 }
 .task_tabs{
   display: flex;
+  justify-content: center;
   border-bottom : 1px solid lightgray;
   position : relative;
 
@@ -32,9 +33,9 @@ body{
   height: 4px;
   background-color: grey;
   position : absolute;
-  width : 60px;
-  left : 0px;
-  top:52px;
+  width : 0;
+  left : 0;
+  top:0;
   padding : 0px;
 }
 
@@ -57,8 +58,10 @@ body{
   color:grey;
 }
 
+/* check를 눌렀을 때 */
 .task_done{
   text-decoration: line-through;
+
 }
 
 
