--- a/style.css
+++ b/style.css
@@ -6,13 +6,21 @@ body{
   background-size: cover;
 }
 
+.input_area{
+  
+  margin-bottom: 2em;
+ 
+}
 .container{
+  margin-top: 1em;
+  margin-bottom: 1em;
   background-color: white;
   min-height: 100vh; 
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .task_area{
+
   border : 1px solid lightgray;
 }
 .task_tabs{
@@ -48,6 +56,7 @@ body{
 }
 
 .task_board{
+  margin-bottom: 3em;
   display: flex;
   padding : 1em;
 
